<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="account">Account</string>
    <string name="account_no">Account No</string>
    <string name="action_account">Account</string>
    <string name="action_channels">Channels</string>
    <string name="action_favourites">Favourites</string>
    <string name="action_home">Home</string>
    <string name="action_live_tv">Live TV</string>
    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_bar_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort_by_categ">Category</string>
    <string name="action_sort_by_default">Default</string>
    <string name="action_sort_by_lang">Language</string>
    <string name="action_sort_by">Sortby</string>
    <string name="action_vod">VOD</string>
    <string name="action_wish_list">Wish List</string>
    <string name="active_from">Active From</string>
    <string name="actvtd_on">Activated On</string>
    <string name="app_name">AndroidIPTV</string>
    <string name="balance">Balance</string>
     <string name="balance_updated_at">Balance Updated At</string>
    <string name="basic_auth">Basic YWRtaW46b2JzQDEyMw==</string> <!-- Spark  admin/obs@123 -->
    <string name="basic_auth_">Basic YmlsbGluZzpwYXNzd29yZA==</string><!-- Peter  billing/password -->
    <string name="basic_auth_ciprian">Basic YnVsZXVzOmwyOWUyMDMxYQ==</string><!--buleus:l29e2031a -->
    <string name="cancel"> Cancel </string>
    <string name="cast_crew">Cast &amp; Crew</string>
    <string name="channels_updated_at">channels updated at</string>
    <string name="channels_category_updated_at">channels category updated at</string>
    <string name="channels_sub_category_updated_at">channels sub category updated at</string>
    <string name="choose_plan_change">Choose a Plan to Change</string>
    <string name="choose_plan_sub">Choose a Plan to Subscribe</string>
    <string name="client_data">Client Data</string>
    <string name="client_pkg_data">Client Package Data</string>
    <string name="content_type">application/json</string>
    <string name="crash_toast_text">Application closed,Choose mail to send report</string>
    <string name="country">Country</string>
    <string name="description">Media Controls</string>
    <string name="duration">Duration</string>
    <string name="email_id">Email Id</string>
    <string name="error_network">Communication Error. Please Check the Network</string>
    <string name="first"> First </string>
    <string name="first_name">First Name</string>
    <string name="home">Home</string>
    <string name="header_title">Communication Error</string>
    <string name="iptv_search_hint">Channel Name</string>
    <string name="language">Language</string>
    <string name="last"> Last </string>
    <string name="last_name">Last Name</string>
    <string name="live_tv">Live TV</string>
    <string name="mobile_no">Mobile No</string>
    <string name="movie_descr">Movie Description</string>
    <string name="movie_details">Movie Details</string>
    <string name="my_account">My Account</string>
    <string name="my_plans_data">My Plans Data</string>
    <string name="name">Name</string>
    <string name="new_pkg_data">New Package Data</string>
     <string name="new_plans_data">New Plans Data</string>
    <string name="next">Next ></string> 
    <string name="own_buy">Own / Buy :</string>
    <string name="package_name">Package Name</string>
    <string name="password">Password</string>
    <string name="remind_me">Remind Me</string>
    <string name="reg_existing_user">Existing User? <b><u>Login</u></b> here</string>
    <string name="reg_new_user">New User? <b><u>Register</u></b> here</string>
    <string name="reg_acc">Register your account</string>
    <string name="release">Release</string>
    <string name="rental">Rental :</string>
    <string name="reg_note">Mobile TV allows user with Mobile Phones, Smart Phones &amp; Tablets
         to enjoy premium digital TV signals on their devices.</string>
    <string name="search">Search</string>
    <string name="sel_country">Select Country </string>
    <string name="sel_pkg">Select Package</string>
    <string name="serialno">Serial No</string>
    <string name="server_url">https://41.76.90.173:8181/obsplatform/api/v1</string><!-- demo server -->
  	<string name="server_url_yusuf">https://188.138.84.29:8443/obsplatform/api/v1</string><!-- Yusuf -->
    <string name="server_url_cristi">https://195.154.179.160:8443/obsplatform/api/v1</string><!-- cristi -->
    <string name="server_url_local">https://192.168.123.164:8443/obsplatform/api/v1</string><!-- local -->
    <string name="submit"> Submit </string>
    <string name="status_err_msg">Dear User.... Logged in user is already watching Live Content on other Active devices...... "Please Note: Parallel viewing is supported on 1 Device only"..... Contact your Service Operator for details.</string>
    <string name="subscribe">Subscribe</string>
    <string name="tenent_id">default</string>
    <string name="user_login">User Login</string>
    <string name="user_name">User Name</string>
    <string name="user_reg">User Registration</string>
    <string name="valid_till">Valid Till</string>
    <string name="vod">VOD</string>
    <string name="watch">  Watch  </string>
    <!-- String Arrays -->
    <string-array name="arrMainMenu">
        <item>Live TV</item>
        <item>VOD</item>
       <!--  <item>Music</item>
        <item>Games</item> -->
    </string-array>
    <string-array name="arrMenuImageNames">
        <item>live_tv</item>
        <item>vod</item>
      <!--   <item>music</item>
        <item>games</item> -->
    </string-array>
    <string-array name="arrMyAccMenu">

        <!-- <item>New Package</item> -->
        <item>My Packages</item>
        <item>My Profile</item>
        <item>History</item>
    </string-array>
    <string-array name="arrMyAccImageNames">

        <!-- <item>new_package</item> -->
        <item>my_packages</item>
        <item>my_profile</item>
        <item>history</item>
    </string-array>
    <string-array name="arrLangauges">
        <item>Telugu</item>
        <item>English</item>
        <item>Hindi</item>
    </string-array>
    <string-array name="arrMovCategNames">
        <item>New Movies</item>
        <item>High Rating</item>
        <item>Coming Soon</item>
        <item>All Movies</item>
    </string-array>
    <string-array name="arrMovCategValues">
        <item>RELEASE</item>
        <item>RATING</item>
        <item>COMING</item>
        <item>ALL</item>
    </string-array>

</resources>