<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/shape_a_ch_bg"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/a_reg_iv_img_acc"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/ic_logo" />

            <LinearLayout
                android:layout_width="152dp"
                android:layout_height="210dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/img_bg_reg_forum"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/a_reg_tv_user_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/user_reg"
                    android:textColor="#5A5A5A"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/a_reg_et_mobile_no"
                    android:layout_width="135dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/img_et_reg"
                    android:hint="@string/mobile_no"
                    android:inputType="phone"
                    android:maxLength="16"
                    android:paddingLeft="3dp"
                    android:textSize="10sp" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/a_reg_et_first_name"
                    android:layout_width="135dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/img_et_reg"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:paddingLeft="3dp"
                    android:textSize="10sp" />

                <EditText
                    android:id="@+id/a_reg_et_last_name"
                    android:layout_width="135dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/img_et_reg"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:paddingLeft="3dp"
                    android:textSize="10sp" />

                <EditText
                    android:id="@+id/a_reg_et_email_id"
                    android:layout_width="135dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/img_et_reg"
                    android:ems="10"
                    android:hint="@string/email_id"
                    android:inputType="text"
                    android:paddingLeft="3dp"
                    android:textSize="10sp" />

                <LinearLayout
                    android:layout_width="135dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="3dp" >

                    <Button
                        android:id="@+id/a_reg_btn_cancel"
                        android:layout_width="30dp"
                        android:layout_height="22dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_btn"
                        android:nextFocusDown="@+id/a_reg_btn_submit"
                        android:nextFocusLeft="@+id/a_reg_et_email_id"
                        android:nextFocusRight="@+id/a_reg_btn_submit"
                        android:nextFocusUp="@+id/a_reg_et_email_id"
                        android:onClick="btnCancel_onClick"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/a_reg_btn_submit"
                        android:layout_width="30dp"
                        android:layout_height="22dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_btn"
                        android:nextFocusLeft="@+id/a_reg_btn_cancel"
                        android:nextFocusUp="@+id/a_reg_btn_cancel"
                        android:onClick="btnSubmit_onClick"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/a_reg_tv_note"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center_horizontal"
                    android:text="@string/reg_note"
                    android:textColor="#5A5A5A"
                    android:textSize="7sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>